--- a/test_zum_Anpassen_der_App/simulations/testMCoAv2/VoIPMCoACN.ini
+++ b/test_zum_Anpassen_der_App/simulations/testMCoAv2/VoIPMCoACN.ini
@@ -224,6 +224,15 @@ debug-on-errors=true
 **.CN[1].proxyUnloadingControlApp.setActiveIPAddressTimeOut = 0.5s 
 **.HA.proxyUnloadingControlApp.setActiveIPAddressTimeOut = 0.5s
 
+**.MN[4].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s 
+**.MN[3].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s 
+**.MN[2].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s 
+**.MN[1].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s
+**.MN[0].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s
+**.CN[0].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s 
+**.CN[1].proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s 
+**.HA.proxyUnloadingControlApp.signalUpdateTimeOut = 5.1s
+
 
 
 
